--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
             <div class="socials">
                <ul>
                   <li>
-                     <a href="#" rel="noopener"><i class="fas fa-envelope"></i></a>
+                     <a href="#" rel="noopener" aria-label="Email"><i class="fas fa-envelope"></i></a>
                   </li><li>
-                     <a href="https://github.com/loiccth" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
+                     <a href="https://github.com/loiccth" target="_blank" rel="noopener" aria-label="Github"><i class="fab fa-github"></i></a>
                   </li><li>
-                     <a href="https://twitter.com/loiccth/" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
+                     <a href="https://twitter.com/loiccth/" target="_blank" rel="noopener" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                   </li><li>
-                     <a href="https://instagram.com/loiccth/" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+                     <a href="https://instagram.com/loiccth/" target="_blank" rel="noopener" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                   </li><li>
-                     <a href="https://linkedin.com/in/loiccth/" target="_blank" rel="noopener"><i class="fab fa-linkedin-in"></i></a>
+                     <a href="https://linkedin.com/in/loiccth/" target="_blank" rel="noopener" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                   </li>
                </ul>
             </div>
