Removed document.write()

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <div class="copyright">
                <h5>
-               Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved. 
+               Copyright &copy; <span id="year"></span> All rights reserved. 
             </div>
          </footer>
       </div>
